[gd_scene load_steps=15 format=3 uid="uid://c2l1eg3cu5w06"]

[ext_resource type="Script" path="res://Scenes/Beach.gd" id="1_iqkom"]
[ext_resource type="Texture2D" uid="uid://c70mnaplvkp71" path="res://Assets/Level_Main.png" id="2_whfmo"]
[ext_resource type="Texture2D" uid="uid://w5e3t5r2prlj" path="res://Assets/Level_Grass.png" id="3_2wvsa"]
[ext_resource type="PackedScene" uid="uid://ctdqwctsy2myo" path="res://Scenes/Crab.tscn" id="3_alax6"]
[ext_resource type="Texture2D" uid="uid://5jah6g7p67d3" path="res://Assets/Level_Water.png" id="4_0btmn"]
[ext_resource type="Script" path="res://Scenes/BabySpawner.gd" id="4_sajsm"]
[ext_resource type="PackedScene" uid="uid://dtifsjoo7qglj" path="res://Scenes/UI/MutationMeter.tscn" id="6_vd2ps"]
[ext_resource type="Script" path="res://Scenes/Pause.gd" id="7_bu70j"]
[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="7_o1far"]
[ext_resource type="Script" path="res://Scenes/CardSelection.gd" id="10_ckg6a"]
[ext_resource type="Script" path="res://Scenes/Debug.gd" id="11_knny3"]
[ext_resource type="PackedScene" uid="uid://bxo28mja2gbvo" path="res://Scenes/UI/TutorialPanel.tscn" id="12_fb6u7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y7s"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avffh"]
bg_color = Color(0, 0, 0, 0.6)

[node name="Beach" type="Node2D"]
script = ExtResource("1_iqkom")

[node name="Level" type="Node2D" parent="."]

[node name="MainLevelTexture" type="Sprite2D" parent="Level"]
texture = ExtResource("2_whfmo")
centered = false

[node name="Grass" type="Sprite2D" parent="Level"]
z_index = 4
texture = ExtResource("3_2wvsa")
centered = false

[node name="WaterGradient" type="Sprite2D" parent="Level"]
z_index = 3
texture = ExtResource("4_0btmn")
centered = false

[node name="Crab" parent="." instance=ExtResource("3_alax6")]
unique_name_in_owner = true
z_index = 6
position = Vector2(640, 640)

[node name="BabySpawner" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 1
y_sort_enabled = true
script = ExtResource("4_sajsm")

[node name="SpawnTimer" type="Timer" parent="BabySpawner"]
wait_time = 0.2
autostart = true

[node name="GameOver" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
z_index = 10
script = ExtResource("7_o1far")

[node name="Background" type="Panel" parent="GameOver"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8y7s")

[node name="GameOverLabel" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 200.0
offset_right = 1280.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReasonLabel" type="Label" parent="GameOver"]
unique_name_in_owner = true
offset_top = 280.0
offset_right = 1280.0
offset_bottom = 320.0
text = "You became a mutant crab. Eww."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetGame" type="Button" parent="GameOver"]
offset_left = 480.0
offset_top = 400.0
offset_right = 800.0
offset_bottom = 460.0
theme_override_font_sizes/font_size = 24
text = "Return to main menu"

[node name="Pause" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
z_index = 10
script = ExtResource("7_bu70j")

[node name="Background" type="Panel" parent="Pause"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a8y7s")

[node name="PausedLabel" type="Label" parent="Pause"]
offset_top = 200.0
offset_right = 1280.0
offset_bottom = 300.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ESCHintLabel" type="Label" parent="Pause"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 280.0
offset_right = 1280.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Press ESC to unpause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetGame" type="Button" parent="Pause"]
offset_left = 480.0
offset_top = 400.0
offset_right = 800.0
offset_bottom = 460.0
theme_override_font_sizes/font_size = 24
text = "Return to main menu"

[node name="MutationMeter" parent="." instance=ExtResource("6_vd2ps")]
unique_name_in_owner = true
z_index = 5
position = Vector2(480, 10)

[node name="CardSelection" type="Node2D" parent="."]
unique_name_in_owner = true
process_mode = 2
visible = false
z_index = 10
script = ExtResource("10_ckg6a")

[node name="Background" type="Panel" parent="CardSelection"]
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_avffh")
metadata/_edit_use_anchors_ = true

[node name="ChooseCardLabel" type="Label" parent="CardSelection"]
offset_top = 220.0
offset_right = 1280.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 36
text = "CHOOSE A MUTATION"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MoveLabel" type="Label" parent="CardSelection"]
visible = false
offset_left = 400.0
offset_top = 250.0
offset_right = 880.0
offset_bottom = 350.0
text = "Special moves can only be used when the energy bar is green, and cost 25% of total energy."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Timers" type="Node" parent="."]

[node name="Wave Timer" type="Timer" parent="Timers"]
wait_time = 30.0
autostart = true

[node name="Wave Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 400.0
offset_top = 300.0
offset_right = 880.0
offset_bottom = 500.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -16
theme_override_font_sizes/font_size = 42
text = "The Baby Crabs
are coming!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsLabel" type="Label" parent="."]
visible = false
offset_left = 16.0
offset_top = 259.0
offset_right = 248.0
offset_bottom = 299.0
theme_override_font_sizes/font_size = 24
text = "Mutations"

[node name="CardHolder" type="GridContainer" parent="."]
custom_minimum_size = Vector2(300, 420)
offset_left = 16.0
offset_top = 295.0
offset_right = 316.0
offset_bottom = 715.0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 2

[node name="Debug" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("11_knny3")

[node name="Button" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 976.0
offset_top = 96.0
offset_right = 1248.0
offset_bottom = 232.0
focus_mode = 0
text = "Mutate"

[node name="Fast" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 992.0
offset_top = 280.0
offset_right = 1192.0
offset_bottom = 330.0
focus_mode = 0
text = "Fast"

[node name="Normal" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 992.0
offset_top = 352.0
offset_right = 1192.0
offset_bottom = 402.0
focus_mode = 0
text = "Normal
"

[node name="Slow" type="Button" parent="Debug"]
layout_mode = 0
offset_left = 992.0
offset_top = 424.0
offset_right = 1192.0
offset_bottom = 474.0
focus_mode = 0
text = "Slow"

[node name="Tutorial Panel" parent="." instance=ExtResource("12_fb6u7")]
position = Vector2(960, 0)

[connection signal="no_energy" from="Crab" to="." method="_on_crab_no_energy"]
[connection signal="timeout" from="BabySpawner/SpawnTimer" to="BabySpawner" method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="GameOver/ResetGame" to="GameOver" method="_on_reset_game_pressed"]
[connection signal="pressed" from="Pause/ResetGame" to="Pause" method="_on_reset_game_pressed"]
[connection signal="mutate" from="MutationMeter" to="." method="_on_mutation_meter_mutate"]
[connection signal="mutation_ending" from="MutationMeter" to="." method="_on_mutation_meter_mutation_ending"]
[connection signal="timeout" from="Timers/Wave Timer" to="BabySpawner" method="_on_wave_timer_timeout"]
[connection signal="pressed" from="Debug/Button" to="Debug" method="_on_button_pressed"]
[connection signal="pressed" from="Debug/Fast" to="Debug" method="_on_fast_pressed"]
[connection signal="pressed" from="Debug/Normal" to="Debug" method="_on_normal_pressed"]
[connection signal="pressed" from="Debug/Slow" to="Debug" method="_on_slow_pressed"]
